--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 .dashboard img{
-    width: 10px;
+    width: 15px;
+    fill: white;
 }
 
 .top-bar img {
@@ -18,21 +19,29 @@
 
 .entire-page {
     display: grid;
-    grid-template-columns: minmax(120px, 1fr) 4fr;
+    grid-template-columns: minmax(130px, 1fr) 4fr;
 }
 
 .dashboard {
     grid-row: 1 / 3;
     background-color: rgb(5, 121, 230);
     color: white;
-    padding: .3rem;
+    padding: 1rem;
 }
 
 .dashboard-title {
     font-size: 1.3rem;
     display: flex;
+    align-items: center;
 }
 
 .dashboard-title img {
-    width: 1.5rem;
+    width: 2rem;
+}
+
+.dashboard-title ~ div {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 1rem .5rem;
 }
