--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,20 @@
-.dashboard img{
-    width: 15px;
-    fill: white;
-}
-
-.top-bar img {
-    width: 10px;
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .projects img {
-    width: 10px;
+    width: 15px;
 }
 
 .trending img {
-    width: 10px;
+    width: 15px;
 }
 
 
 
 .entire-page {
     display: grid;
-    grid-template-columns: minmax(130px, 1fr) 4fr;
+    grid-template-columns: minmax(170px, 1fr) 4fr;
 }
 
 .dashboard {
@@ -29,14 +24,19 @@
     padding: 1rem;
 }
 
+.dashboard svg {
+    width: 15px;
+    fill: white;
+}
+
 .dashboard-title {
     font-size: 1.3rem;
     display: flex;
     align-items: center;
 }
 
-.dashboard-title img {
-    width: 2rem;
+.dashboard-title svg {
+    min-width: 2rem;
 }
 
 .dashboard-title ~ div {
@@ -44,4 +44,86 @@
     flex-direction: column;
     gap: 10px;
     padding: 1rem .5rem;
+}
+
+.top-bar {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    padding: 0rem 2rem;
+    box-shadow: 2px 2px grey;
+}
+
+.top-bar svg{
+    width: 20px;
+}
+
+.search-bar {
+    display: flex;
+    align-items: center;
+}
+
+.search-bar input {
+    background-color: rgba(161, 160, 160, 0.435);
+    border: none;
+    border-radius: .5rem;
+    height: 20px;
+    flex-grow: 1;
+}
+
+.name-bar, .post {
+    justify-self: end;
+    align-self: center;
+}
+
+.name-bar p {
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.name-bar img {
+    width: 3rem;
+    border-radius: 1rem;
+}
+
+.hi-there {
+    display: grid;
+    grid-template-columns: .5fr 4fr;
+    font-weight: bold;
+    align-items: center;
+}
+
+.hi-there img {
+    width: 5rem;
+    grid-row: 1 / 3;
+    border-radius: 2rem;
+    justify-self: center;
+}
+
+.hi-there :nth-child(n+2) {
+    margin-left: 1rem;
+}
+
+.hi-there img + p {
+    margin-bottom: .3rem;
+}
+
+.hi-there :last-child {
+    font-size: 1.5rem;
+    margin-top: .5rem;
+}
+
+.post {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+}
+
+.post button {
+    background-color: rgb(5, 121, 230);
+    color: white;
+    border: none;
+    padding: 10px 30px;
+    border-radius: 2rem;
 }
