--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body {
     display: grid;
     grid-template-columns: 2fr 1fr;
     padding: 0rem 2rem;
-    box-shadow: 2px 2px grey;
+    box-shadow: 2px 2px 5px rgb(128, 128, 128, .5);
 }
 
 .top-bar svg{
@@ -126,4 +126,49 @@ body {
     border: none;
     padding: 10px 30px;
     border-radius: 2rem;
+}
+
+.main-body {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    margin: 0rem 2rem;
+}
+
+.projects {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+}
+
+.projects h3 {
+    grid-column: 1 / 3;
+    margin-bottom: 0px;
+}
+
+.project-cards {
+    box-shadow: 
+        inset 5px 0px orange,
+        0px 5px 5px rgb(128, 128, 128, .5);
+    border-radius: .3rem;
+    padding: 0rem 2rem;
+    display: grid;
+    align-content: start;
+}
+
+.project-cards-img {
+    justify-self: end;
+    display: flex;
+    gap: 1rem;
+}
+
+.project-cards img {
+    width: 20px;
+}
+
+.project-cards h4 {
+    margin-bottom: 0px;
+}
+
+.project-cards p {
+    margin-top: 0px;
 }
