--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
-body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+:root {
+    --main-shadow: 5px 5px 10px rgb(128, 128, 128, .5);
+    --grey: rgba(161, 160, 160, 0.435);
 }
 
-.projects img {
-    width: 15px;
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .trending img {
@@ -50,7 +51,7 @@ body {
     display: grid;
     grid-template-columns: 2fr 1fr;
     padding: 0rem 2rem;
-    box-shadow: 2px 2px 5px rgb(128, 128, 128, .5);
+    box-shadow: var(--main-shadow);
 }
 
 .top-bar svg{
@@ -63,7 +64,7 @@ body {
 }
 
 .search-bar input {
-    background-color: rgba(161, 160, 160, 0.435);
+    background-color: var(--grey);
     border: none;
     border-radius: .5rem;
     height: 20px;
@@ -128,16 +129,31 @@ body {
     border-radius: 2rem;
 }
 
+.body-BC {
+    background-color: var(--grey);
+}
+
 .main-body {
     display: grid;
     grid-template-columns: 3fr 1fr;
     margin: 0rem 2rem;
 }
 
+.project-cards, 
+.announcement-cards div,
+.trending div {
+    background-color: white;
+}
+
 .projects {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
+}
+
+
+.projects img {
+    width: 15px;
 }
 
 .projects h3 {
@@ -148,7 +164,7 @@ body {
 .project-cards {
     box-shadow: 
         /* inset 5px 0px orange, */
-        0px 5px 5px rgb(128, 128, 128, .5);
+        var(--main-shadow);
     border-radius: .5rem;
     height: 14rem;
     padding: 0rem 2rem;
@@ -184,4 +200,41 @@ body {
 .project-cards p {
     margin-top: 0px;
     height: 5rem;
+}
+
+.announcements {
+    margin-left: 2rem;
+}
+
+.announcement-cards {
+    box-shadow: var(--main-shadow);
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+}
+
+.announcement-cards :first-child {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.announcement-cards :last-child {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.announcement-cards div {
+    flex-shrink: 0rem;
+    padding: 2rem;
+}
+
+.announcement-cards > div > h5,
+.announcement-cards > div > p {
+    margin: 0px;
+}
+
+#grey {
+    background-color: grey;
+    height: 50px;
+    width: 50px;
 }
