--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,6 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.trending img {
-    width: 15px;
-}
-
 .entire-page {
     display: grid;
     grid-template-columns: minmax(170px, 1fr) 5fr;
@@ -81,7 +77,8 @@ body {
     gap: 1rem;
 }
 
-.name-bar img {
+.name-bar img,
+.trending img {
     width: 3rem;
     border-radius: 1rem;
 }
@@ -200,11 +197,13 @@ body {
     height: 5rem;
 }
 
-.announcements {
+.announcements, 
+.trending {
     margin-left: 2rem;
 }
 
-.announcement-cards {
+.announcement-cards,
+.trending-profiles {
     box-shadow: var(--main-shadow);
     display: flex;
     flex-direction: column;
@@ -222,7 +221,8 @@ body {
     border-bottom-right-radius: 10px;
 }
 
-.announcement-cards div > div {
+.announcement-cards div > div,
+.trending-profiles {
     padding: 2rem;
 }
 
@@ -237,4 +237,27 @@ body {
     background-color: grey;
     height: 1px;
     width: 75%;
+}
+
+.trending-profiles,
+.trending-profiles :first-child {
+    border-radius: 10px;
+}
+
+.trending-profiles {
+    padding: 0px;
+}
+
+.trending-profiles div {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    margin: 1rem;
+}
+
+.trending-profiles > div > img {
+    grid-row: 1 / 3;
+}
+
+.trending-profiles > div > p {
+    margin: 0px 1rem;
 }
