--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,14 @@ body {
 
 .entire-page {
     display: grid;
-    grid-template-columns: minmax(170px, 1fr) 5fr;
+    grid-template-columns: minmax(170px, 1fr) 6fr;
 }
 
 .dashboard {
     grid-row: 1 / 3;
     background-color: rgb(5, 121, 230);
     color: white;
+    font-weight: bold;
     padding: 1rem;
 }
 
@@ -37,7 +38,7 @@ body {
 .dashboard-title ~ div {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
     padding: 1rem .5rem;
 }
 
@@ -87,7 +88,7 @@ body {
     display: grid;
     grid-template-columns: .5fr 4fr;
     font-weight: bold;
-    align-items: center;
+    align-items: start;
 }
 
 .hi-there img {
@@ -130,7 +131,7 @@ body {
 
 .main-body {
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 3fr 2fr;
     margin: 0rem 2rem;
 }
 
@@ -142,13 +143,8 @@ body {
 
 .projects {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
-}
-
-
-.projects img {
-    width: 15px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
 }
 
 .projects h3 {
