--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,50 @@
 :root {
+    --svg-size: 1.2rem
+}
+
+body {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+}
+
+.side-bar {
+    background-color: rgb(0, 115, 255);
+}
+
+.side-bar > * {
+    margin-left: 1rem;
+}
+
+.side-bar img {
+    padding-right: .5rem;
+    width: var(--svg-size);
+    padding: .2rem .2rem 0rem .2rem;
+}
+
+.side-bar > h1 > img {
+    width: 2rem;
+}
+
+ul {
+    list-style-type: none;
+}
+
+ul > li > img {
+    padding-right: 1rem;
+}
+
+.top-bar {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
+
+.top-bar img {
+    width: 1rem;
+}
+
+/* 1st attempt */
+
+/* :root {
     --main-shadow: 5px 5px 10px rgb(128, 128, 128, .5);
     --grey: rgba(161, 160, 160, 0.435);
 }
@@ -154,7 +200,6 @@ body {
 
 .project-cards {
     box-shadow: 
-        /* inset 5px 0px orange, */
         var(--main-shadow);
     border-radius: .5rem;
     height: 14rem;
@@ -173,7 +218,7 @@ body {
     border-bottom-left-radius: 1rem;
 }
 
-.project-cards-img {    /* div containing image icons */
+.project-cards-img {
     justify-self: end;
     display: flex;
     gap: 1rem;
@@ -256,4 +301,4 @@ body {
 
 .trending-profiles > div > p {
     margin: 0px 1rem;
-}
+} */
